# term-wm

./: .gitignore  AGENTS.md  Cargo.toml  DRAFT.README.md  README.md  build.rs  deny.toml
.cargo/: config.toml.example  deny.toml
.github--TODO-REENABLE/workflows/: rust-tests.yml
.github/workflows/: rust-lint.yml  rust-tests.yml
.opencode/plans/: 178-FIXES.md  178-TODOS.md  1782323774966-mighty-otter.md  1782330499995-swift-comet.md  1782333713387-misty-star.md  1782338987122-crisp-planet.md  1782341714013-curious-pixel.md  1782365430211-neon-forest.md  1782495043336-silent-island.md  1782520155016-cosmic-garden.md  1782575597457-happy-squid.md  1782744048467-crisp-wolf.md  1782758148946-playful-sailor.md  1782765968083-witty-engine.md  1782772605999-witty-mountain.md  1782778266169-witty-cabin.md  1782828952574-cosmic-star.md  1782936616561-lucky-meadow.md  1782942083535-glowing-wolf.md  1782950916623-witty-tiger.md  1782952088569-hidden-engine.md  1782953422610-mighty-canyon.md  1782962024690-proud-mountain.md  1783011325376-sunny-moon.md  1783096321956-calm-cabin.md  1783115962035-hidden-wizard.md  (+72 more)
.zed/: tasks.json
assets/: help.md
crates/term-bench/: Cargo.toml  README.md
crates/term-bench/src/: main.rs
crates/term-session-client/: Cargo.toml  README.md
crates/term-session-client/src/: connection.rs  lib.rs  main.rs  remote_pane.rs
crates/term-session-muxio-service-definitions/: Cargo.toml  README.md
crates/term-session-muxio-service-definitions/src/: lib.rs  methods.rs  push_frame.rs
crates/term-session-server/: Cargo.toml  README.md
crates/term-session-server/src/: lib.rs  main.rs  protocol.rs  session.rs  session_server.rs
crates/term-wm-console/: Cargo.toml  README.md
crates/term-wm-console/src/: console_event_source.rs  console_render_target.rs  draw_plan_renderer.rs  lib.rs  widget_adapter.rs
crates/term-wm-core/: Cargo.toml  README.md
crates/term-wm-core/src/: actions.rs  app_context.rs  bottom_panel_trait.rs  component_context.rs  config.rs  constants.rs  debug_event_flags.rs  debug_log.rs  draw_plan.rs  engine.rs  event_loop.rs  events.rs  hitbox_registry.rs  keybindings.rs  lib.rs  macros.rs  menu_trait.rs  mouse_coord.rs  notification.rs  pane.rs  panel.rs  panel_trait.rs  power_profile.rs  pty.rs  reaper.rs  runner.rs  task_scheduler.rs  term_color.rs  theme.rs  top_panel_trait.rs  ui.rs  wm_config.rs
crates/term-wm-core/src/chrome/: metrics.rs  mod.rs  target.rs
crates/term-wm-core/src/command_menu/: arena.rs  command_registry.rs  context.rs  event_bus.rs  matcher.rs  mod.rs  registry.rs
crates/term-wm-core/src/components/: confirm_overlay.rs  mod.rs  text_renderer.rs
crates/term-wm-core/src/io/: clipboard.rs  console.rs  console_event_source.rs  console_render_target.rs  event_source.rs  frame_pacer.rs  mod.rs  power_profile.rs  render_target.rs  title.rs  unified_event_source.rs
crates/term-wm-core/src/io/utils/: mod.rs
crates/term-wm-core/src/layout/: floating.rs  mod.rs  tiling.rs
crates/term-wm-core/src/utils/: ansi.rs  keyboard_normalizer.rs  linkifier.rs  mod.rs  selectable_text.rs
crates/term-wm-core/src/window/: decorator.rs  entry.rs  focus_ring.rs  mod.rs  test_component.rs
crates/term-wm-core/src/window/window_manager/: chrome.rs  command_menu.rs  drag.rs  focus.rs  layer_manager.rs  layout.rs  mod.rs  overlays.rs  sys.rs
crates/term-wm-layout-engine/: Cargo.toml  README.md
crates/term-wm-layout-engine/proptest-regressions/: split.txt
crates/term-wm-layout-engine/src/: floating.rs  hit_test.rs  layout.rs  lib.rs  node.rs  ordering.rs  orientation.rs  rect.rs  region_map.rs  scroll.rs  snap.rs  split.rs  tiling.rs
crates/term-wm-pty-engine/: Cargo.toml  README.md
crates/term-wm-pty-engine/src/: clipboard.rs  input_encoding.rs  lib.rs  pane.rs  pty.rs  redirect_stdio.rs  signal.rs  test_pty.rs  title.rs
crates/term-wm-registry/: Cargo.toml
crates/term-wm-registry/src/: core_component.rs  lib.rs
crates/term-wm-render/: Cargo.toml  README.md
crates/term-wm-render/src/: lib.rs
crates/term-wm-sys-ui-components/: Cargo.toml  README.md
crates/term-wm-sys-ui-components/assets/: help.md
crates/term-wm-sys-ui-components/src/: core_component.rs  lib.rs  wm_bottom_panel.rs  wm_command_palette.rs  wm_debug_log.rs  wm_dialog_overlay.rs  wm_fab.rs  wm_help_overlay.rs  wm_keybinding_overlay.rs  wm_menu_overlay.rs  wm_notification.rs  wm_session_manager.rs  wm_system_panel.rs  wm_top_panel.rs
crates/term-wm-sys-ui-components/src/sys/: mod.rs  wm_help_overlay.rs  wm_keybinding_overlay.rs
crates/term-wm-ui-components/: Cargo.toml  README.md
crates/term-wm-ui-components/assets/: help.md
crates/term-wm-ui-components/proptest-regressions/: terminal.txt
crates/term-wm-ui-components/src/: ascii_image.rs  button.rs  canvas_scroll_view.rs  center.rs  command_palette.rs  confirm_overlay.rs  dialog_overlay.rs  helpers.rs  label.rs  lib.rs  list.rs  markdown_viewer.rs  menu.rs  menu_overlay.rs  modal_container.rs  panel.rs  panel_bar.rs  placement_container.rs  scroll_view.rs  status_bar.rs  svg_image.rs  terminal.rs  text_renderer.rs  toggle_list.rs  vertical_stack.rs
crates/term-wm-ui-components/src/sys/: debug_log.rs  help_overlay.rs  keybinding_overlay.rs  mod.rs  selection_preview_overlay.rs
crates/term-wm-ui-facade/: Cargo.toml  README.md
crates/term-wm-ui-facade/src/: core_component.rs  layer_component.rs  lib.rs  overlay_component.rs
docs/: DRAFT-MUXIO-SESSION-ARCHITECTURE.txt  PROFILING.md  WINDOW-BORDERS.txt
examples/: dual_image.rs
src/: actions.rs  colors.rs  component_context.rs  components.rs  constants.rs  event_loop.rs  keybindings.rs  lib.rs  logging.rs  main.rs  panel.rs  prelude.rs  pty.rs  runner.rs  standalone.rs  state.rs  term_color.rs  term_wm_app.rs  theme.rs  tracing_sub.rs  ui.rs  unified_event_source.rs  widget_adapter.rs  wm_config.rs  wm_state.rs
tests/: integration_basic.rs  integration_layout_resize.rs  integration_new_window_focus.rs  integration_session.rs  integration_tiling.proptest-regressions  integration_tiling.rs  panic_debug_log.rs
(+63 files in other folders)
