[package]
name = "term-wm"
description = "A cross-platform terminal multiplexer, window manager, Ratatui component library, and runtime."
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[workspace]
members = [
    "crates/term-bench",
    "crates/term-wm-core",
    "crates/term-wm-layout-engine",
    "crates/term-wm-pty-engine",
    "crates/term-wm-sys-ui-components",
    "crates/term-wm-ui-components",
]
resolver = "2"

[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.7.1-alpha"
edition = "2024"
repository = "https://github.com/jzombie/term-wm"
license = "MIT OR Apache-2.0"
publish = true

[workspace.dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.2"
hostname = "0.4.2"
indoc = "2.0.7"
libc = "0.2.186"
line-ending = "1.5.1"
linkify = "0.10.0"
portable-pty = "0.9.0"
proptest = "1.11.0"
pulldown-cmark = "0.13.0"
ratatui = "0.30.0"
resvg = "0.47.0"
shell-words = "1.1.1"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.24.0"
term-wm-core = { path = "crates/term-wm-core", version = "0.7.1-alpha" }
term-wm-layout-engine = { path = "crates/term-wm-layout-engine", version = "0.7.1-alpha" }
term-wm-pty-engine = { path = "crates/term-wm-pty-engine", version = "0.7.1-alpha" }
term-wm-sys-ui-components = { path = "crates/term-wm-sys-ui-components", version = "0.7.1-alpha" }
term-wm-ui-components = { path = "crates/term-wm-ui-components", version = "0.7.1-alpha" }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
vt100 = "0.16.2"
webbrowser = "1.2.1"

[dependencies]
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
hostname = { workspace = true }
line-ending = { workspace = true }
portable-pty = { workspace = true }
ratatui = { workspace = true }
term-wm-core = { workspace = true }
term-wm-sys-ui-components = { workspace = true }
term-wm-ui-components = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webbrowser = { workspace = true }

[build-dependencies]
indoc = { workspace = true }

[dev-dependencies]
