[package]
name = "term-wm"
description = "A cross-platform terminal multiplexer, window manager, Ratatui component library, and runtime."
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[workspace]
members = [
    "crates/term-bench",
    "crates/term-session-client",
    "crates/term-session-muxio-service-definitions",
    "crates/term-session-server",
    "crates/term-wm-console",
    "crates/term-wm-core",
    "crates/term-wm-layout-engine",
    "crates/term-wm-pty-engine",
    "crates/term-wm-render",
    "crates/term-wm-sys-ui-components",
    "crates/term-wm-ui-components",
]
resolver = "2"

[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.8.11-alpha"
edition = "2024"
repository = "https://github.com/jzombie/term-wm"
license = "MIT OR Apache-2.0"
publish = true

[workspace.dependencies]
arboard = "3.6.1"
arc-swap = "1.9.2"
base64 = "0.22.1"
bitcode = "0.6.9"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.4"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
ctrlc = "3.5.2"
hostname = "0.4.2"
indoc = "2.0.7"
libc = "0.2.186"
line-ending = "1.5.1"
linkify = "0.11.0"
muxio-core = "0.12.0-alpha"
muxio-rpc-service = "0.12.0-alpha"
muxio-rpc-service-caller = "0.12.0-alpha"
muxio-rpc-service-endpoint = "0.12.0-alpha"
muxio-tokio-mpsc-adapter = "0.12.0-alpha"
muxio-tokio-rpc-ipc-client = "0.12.0-alpha"
muxio-tokio-rpc-ipc-server = "0.12.0-alpha"
portable-pty = "0.9.0"
proptest = "1.11.0"
pulldown-cmark = "0.13.0"
ratatui = "0.30.0"
resvg = "0.47.0"
shell-words = "1.1.1"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.24.0"
term-session-client = { path = "crates/term-session-client", version = "0.8.11-alpha" }
term-session-muxio-service-definitions = { path = "crates/term-session-muxio-service-definitions", version = "0.8.11-alpha" }
term-session-server = { path = "crates/term-session-server", version = "0.8.11-alpha" }
term-wm = { path = ".", version = "0.8.11-alpha" }
term-wm-console = { path = "crates/term-wm-console", version = "0.8.11-alpha" }
term-wm-core = { path = "crates/term-wm-core", version = "0.8.11-alpha" }
term-wm-layout-engine = { path = "crates/term-wm-layout-engine", version = "0.8.11-alpha" }
term-wm-pty-engine = { path = "crates/term-wm-pty-engine", version = "0.8.11-alpha" }
term-wm-render = { path = "crates/term-wm-render", version = "0.8.11-alpha" }
term-wm-sys-ui-components = { path = "crates/term-wm-sys-ui-components", version = "0.8.11-alpha" }
term-wm-ui-components = { path = "crates/term-wm-ui-components", version = "0.8.11-alpha" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vt100 = "0.16.2"
webbrowser = "1.2.1"

[[bin]]
name = "term-wm"
required-features = ["sys-ui"]

[features]
default = ["sys-ui"]
sys-ui = ["dep:term-wm-sys-ui-components"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
hostname = { workspace = true }
line-ending = { workspace = true }
portable-pty = { workspace = true }
ratatui = { workspace = true }
term-wm-console = { workspace = true }
term-wm-core = { workspace = true }
term-wm-layout-engine = { workspace = true }
term-wm-render = { workspace = true }
term-wm-sys-ui-components = { workspace = true, optional = true }
term-wm-ui-components = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webbrowser = { workspace = true }

[build-dependencies]
indoc = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
term-wm-render = { workspace = true }
