[package]
name = "term-session-client"
description = "IPC-based session client for term-wm. For internal usage."
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true, features = ["bracketed-paste"] }
libc = { workspace = true }
muxio-core = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
muxio-rpc-service-endpoint = { workspace = true }
muxio-tokio-mpsc-adapter = { workspace = true }
muxio-tokio-rpc-ipc-client = { workspace = true }
portable-pty = { workspace = true }
term-session-muxio-service-definitions = { workspace = true }
term-wm-core = { workspace = true }
term-wm-pty-engine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vt100 = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
