[package]
name = "term-session-muxio-service-definitions"
description = "Shared service definitions for term-session IPC using Muxio."
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bitcode = { workspace = true }
muxio-rpc-service = { workspace = true }
