[package]
name = "term-session-server"
description = "Pure PTY session manager — no UI framework dependencies."
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bitcode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
portable-pty = { workspace = true }
term-wm-pty-engine = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vt100 = { workspace = true }
