[package]
name = "term-wm-core"
description = "Core window manager engine and layout primitives for term-wm."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
crossterm = { workspace = true }
linkify = { workspace = true }
portable-pty = { workspace = true }
ratatui = { workspace = true }
strum = { workspace = true, features = ["derive"] }
term-wm-pty-engine = { workspace = true }
tracing = { workspace = true }
