[package]
name = "term-wm-core"
description = "Core window manager engine, runtime, and layout primitives for term-wm."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
linkify = { workspace = true }
portable-pty = { workspace = true }
ratatui = { workspace = true }
slotmap = "1.1"
strum = { workspace = true, features = ["derive"] }
term-wm-layout-engine = { workspace = true }
term-wm-pty-engine = { workspace = true }
console = { workspace = true }
tracing = { workspace = true }
