[package]
name = "term-wm-core"
description = "Core window manager engine, runtime, and layout primitives for term-wm."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["pty"]
pty = ["portable-pty"]

[dependencies]
console = { workspace = true }
crossbeam-channel = { workspace = true }
linkify = { workspace = true }
portable-pty = { workspace = true, optional = true }
slotmap = "1.1"
smallvec = "1.15"
strum = { workspace = true, features = ["derive"] }
term-wm-layout-engine = { workspace = true }
term-wm-pty-engine = { workspace = true }
term-wm-render = { workspace = true }
textwrap = "0.16"
tracing = { workspace = true }
