[package]
name = "term-wm-pty-engine"
description = "PTY engine for term-wm."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
arboard = { workspace = true }
arc-swap = { workspace = true }
base64 = { workspace = true }
crossterm = { workspace = true }
ctrlc = { workspace = true }
libc = { workspace = true }
portable-pty = { workspace = true }
thiserror = { workspace = true }
vt100 = { workspace = true }
