[package]
name = "term-wm-render"
description = "Rendering abstraction layer with backend and target traits for term-wm."
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ratatui = { workspace = true }
