[package]
name = "term-wm-ui-components"
version = "0.5.1-alpha"
edition = "2024"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
repository = "https://github.com/jzombie/term-wm"
license = "MIT OR Apache-2.0"

[dev-dependencies]
tempfile = "3.24.0"

[dependencies]
term-wm-core = { path = "../term-wm-core" }
crossterm = "0.29.0"
ratatui = "0.30.0"
portable-pty = "0.9.0"
vt100 = "0.16.2"
pulldown-cmark = "0.13.0"
resvg = "0.45.1"
indoc = "2.0.7"
linkify = "0.10.0"
shell-words = "1.1.1"
thiserror = "2.0.17"
tracing = "0.1.44"
webbrowser = "1.0.6"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }
