[package]
name = "term-wm-ui-components"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
crossterm = { workspace = true }
indoc = { workspace = true }
linkify = { workspace = true }
portable-pty = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { workspace = true }
resvg = { workspace = true }
shell-words = { workspace = true }
term-wm-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
vt100 = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
