[package]
name = "term-wm-ui-components"
description = "Ratatui UI components for term-wm (terminal, scroll view, markdown, image viewer, etc.)."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
crossterm = { workspace = true }
indoc = { workspace = true }
linkify = { workspace = true }
nucleo-matcher = { workspace = true }
portable-pty = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { workspace = true }
resvg = { workspace = true }
shell-words = { workspace = true }
term-wm-console = { workspace = true }
term-wm-core = { workspace = true }
term-wm-layout-engine = { workspace = true }
term-wm-pty-engine = { workspace = true }
term-wm-render = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
vt100 = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
# proptest was previously used for property-based scroll-sync tests.
# If re-adding property tests, uncomment and ensure proptest-regressions/
# is maintained.
# proptest = { workspace = true }
tempfile = { workspace = true }
